	  to construct the ontology URI:   
	  (NOTE: all of this may be reverted when general re-hosting mechanism is completed) 
		CreateOntologyInfo.namespaceRoot
		RegisteredOntologyInfo.namespaceRoot
		MetadataBaseInfo.authorityAbbreviationUri
		Util2: checks for duplicate URI
		VocabCreator: uses Server.DEFAULT_NAMESPACE_ROOT
		
	
2009-07-26
	
	Preparations for re-hosting of external ontology:
		"Re-hosting" means that the original base namespace of the submitted ontology is preserved.
		Basically, the whole ontology is un-changed except for new metadata elements.
	
	- TempOntologyInfo: new attribute preserveOriginalBaseNamespace
	  See ontmd project (portal) for how the flag is captured and included in the corresponding
	  TempOntologyInfo object.
	  
	- Server.createOntology(CreateOntologyInfo): uses the preserveOriginalBaseNamespace flag to
	  keep original base namespace or apply the regular asssignment of the MMISW-based namespace
	  as usual.
	  
	- Basic submission is now handled. I'm testing this with a simple ontology with base namespace
	  http://EXAMPLE.org/abc/example
	  
	- Next: complement other actions with registered "external" ontology, eg., "resolve" the 
	  ontology for display purposes ... 
	
	
2009-06-07
	- QueryUtil._setDomainClassesForProperties: checking for null to avoid a NPE with 
	  http://mmisw.org/ont/univmemphis/sensor
	  TODO Check why the domain uri has not been assigned for the propertyInfo.
	  
	  
2009-06-06
	- Utf8Util: new utilities (based on jchardet) to detect/verify the required UTF-8 charset
	  for any external stream to be incorporated in the registry (no attempts to do any automated
	  conversions for the moment).
	- Applying UTF-8 verification:
		- when loading a model from the registry: normally, every entry in the registry should be
		  UTF-8 already; however, this is a general sanity check that can be useful in the case of
		  any previously registered entry that may not be UTF-8.